# unix-dog

./: .gitignore  LICENSE  README.md  pyproject.toml
dog/: __main__.py
dog/cli/: dog_cli.py
dog/src/: __main__.py  cli.py  dog.py  dog_config.py  dog_file_processor.py  dog_utils.py  file_processor.py  utils.py
dog/src/core/: dog_file_processor.py
dog/src/utils/: dog_utils.py
dog/test/: test_dog_utils.py
dog/tests/: test_dog_cli.py  test_dog_config.py  test_dog_file_processor.py  test_dog_utils.py
dog/tools/: file-generator.py
dog/utils/: dog_utils.py
sample-files/: sample-file-ascii.txt  sample-file-extended_ascii.txt
tests/: test_dog_cli.py  test_dog_config.py  test_dog_file_processor.py  test_dog_utils.py
